# RtAudioEffect

./: .gitignore  Cargo.toml  README.md  todo
device_manual_controller/: Cargo.toml
diagrams/: classes.puml  create.puml  main.puml  run.puml  stream_analyzer.puml  ui_controller.puml
diagrams_old/: main.puml
egui_addons/: Cargo.toml
esp_head_light/: CMakeLists.txt  heaptrace-gdbinit  sdkconfig  sdkconfig.old
headlight/: Cargo.toml  sdkconfig.defaults
headlight_if/: Cargo.toml
rt_audio_effect/: Cargo.toml  README.md
rt_audio_effect/serializer/: Cargo.toml
rt_audio_effect/serializer/serializer_macro/: Cargo.toml
rt_audio_effect/serializer/serializer_macro/src/: lib.rs
rt_audio_effect/serializer/src/: lib.rs
rt_audio_effect/src/: main.rs  messages.rs  serializer.rs  server.rs
rt_audio_effect/src/audio/: audio_buffer.rs  audio_stream.rs  mod.rs  types.rs
rt_audio_effect/src/audio_analyzer/: mel_filters.rs  mod.rs  spectrogram.rs  spectrum.rs  spectrum_analyzer.rs  stream_analyzer.rs  utils.rs
rt_audio_effect/src/service/: messages.rs  mod.rs  service.rs  service_client.rs  service_register.rs
rt_audio_effect/src/ui/: central_panel.rs  mod.rs  smooth_fft.drawio  ui_controller.rs
rt_audio_effect/src/ui/plot/: mod.rs
rt_audio_effect/src/ui/plot/details/: element_buffer.rs  mod.rs  shader_program.rs  uniform_buffer.rs  vertex_array.rs  vertex_attribute.rs
rt_audio_effect/src/ui/plot/resources/: barplot.vert  basic.frag  spectrogram.vert
rt_audio_effect/src/ui/plot/spectrum/: spectrum_renderer.rs  spectrum_renderer_new.rs
src/: app.rs  (+7 more)
(+134 files in other folders)
